Fix bug on tablet behavior for clicking on "choose threshold"

--- a/src/compass/sass/play.scss
+++ b/src/compass/sass/play.scss
@@ -148,7 +148,7 @@ $gap3:15px; /* Responsive design 3 column */
 	.checkbox{position:relative; top:3px; float:left; height:30px;}
 	.input-value input{border:1px solid $grey-light; line-height:30px; padding:0 5px; font-size:$basic-size; height:30px;}
 	select{display:inline-block; width:auto;}
-	.details{margin-left:5px;}
+	.details{margin-left:5px; display:inline-block;}
 	.margin{margin-bottom:5px;}
 }
 .wrap-threshold{position:relative; padding:10px 15px 15px; background:$grey-lighter2; border-radius:0 0 5px 0;}
